made some changes

--- a/midterm_report.tex
+++ b/midterm_report.tex
@@ -56,7 +56,7 @@ Interestingly, this new model does not seem to do a lot better than the first mo
 
 \section*{Future Plans}
 \subsection*{Over (and Under-) fitting:}
-We plan to avoid underfitting by trying different models with different features to see which features are the most important.  We plan to avoid overfitting by adding regularizers such as LASSO to produce sparser solutions.  Sparsity will allow for better representation of larger data sets. By decreasing the number of features we have already reduced overfitting.  
+We plan to avoid underfitting by trying different models with different features to see which features are the most important.  We have already reduced overfitting by decreasing the number of features in our data.  In addition, we plan to avoid overfitting by adding regularizers such as LASSO to produce sparser solutions.  Sparsity will allow for better representation of our large data set.  Finally, we plan to implement k-cross validation to prevent overfitting.
 
 \subsection*{Testing Effectiveness:}
 We will use our test set when we have decided the final model. Namely, we will look at the out of sample error as an estimation of the effectiveness of the model.
